Installed large word list.  Updated game creation controller and storage.
